--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>clpnet.world - Coming Soon</title>
+  <meta charset="UTF-8">
+  <title>Coming Soon - clpnet.world</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: #f8fafc;
-      color: #333;
-      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #4f46e5, #6366f1);
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      padding: 100px 20px;
+      padding: 80px 20px;
+      margin: 0;
     }
     h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5em;
+      font-size: 3.5rem;
+      margin-bottom: 20px;
     }
     p {
       font-size: 1.2rem;
-      color: #666;
+      color: #e0e7ff;
+    }
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
     }
     footer {
       margin-top: 3em;
       font-size: 0.9rem;
-      color: #999;
+      color: #cbd5e1;
     }
   </style>
 </head>
 <body>
-  <h1>clpnet.world</h1>
-  <p>Our website is coming soon!<br />We're working hard to launch something amazing.</p>
-  <footer>Powered by Amazon SES Email Service</footer>
+  <div class="container">
+    <h1>🚀 Coming Soon</h1>
+    <p>We're working hard to launch <strong>clpnet.world</strong></p>
+    <p>Stay tuned for something amazing.</p>
+    <footer>© 2025 clpnet.world | Powered by Amazon SES</footer>
+  </div>
 </body>
 </html>
