--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon | clpnet.world</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CLPNET</title>
   <style>
+    /* Reset */
     * {
       margin: 0;
       padding: 0;
@@ -12,162 +13,318 @@
     }
 
     body {
-      font-family: "Segoe UI", sans-serif;
-      height: 100vh;
-      background: linear-gradient(-45deg, #1e3a8a, #4f46e5, #6366f1, #8b5cf6);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
-      color: #fff;
-      overflow: hidden;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background:
+        radial-gradient(circle at top left, #0d0d2b 30%, #000 90%),
+        linear-gradient(135deg, #1a1a3a 0%, #0a0a19 100%);
+      color: #e0e0e0;
+      overflow-x: hidden;
+      min-height: 100vh;
+      position: relative;
       display: flex;
       flex-direction: column;
-    }
-
-    @keyframes gradient {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      justify-content: space-between;
+      perspective: 900px; /* for 3D cube */
     }
 
     header {
-      text-align: center;
-      padding: 2rem 1rem 1rem;
-      font-size: 1.2rem;
-      background: rgba(0, 0, 0, 0.05);
-      z-index: 2;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 30px 80px;
+      position: relative;
+      z-index: 10;
+      background: rgba(13, 13, 43, 0.6);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+      border-radius: 0 0 15px 15px;
     }
 
-    .stars {
+    header .logo {
+      font-size: 1.8rem;
+      font-weight: 700;
+      letter-spacing: 2px;
+      color: #8a2be2;
+      user-select: none;
+    }
+
+    nav a {
+      margin: 0 18px;
+      text-decoration: none;
+      color: #cdb4db;
+      font-weight: 600;
+      font-size: 1.05rem;
+      transition: color 0.3s ease;
+      user-select: none;
+    }
+
+    nav a:hover {
+      color: #ff00ff;
+    }
+
+    .hero {
+      padding: 100px 80px;
+      max-width: 620px;
+      position: relative;
+      z-index: 10;
+    }
+
+    .hero h1 {
+      font-size: 3.8rem;
+      line-height: 1.15;
+      margin-bottom: 24px;
+      font-weight: 800;
+      color: #ddd6f3;
+      text-shadow: 0 0 12px rgba(138, 43, 226, 0.6);
+    }
+
+    .hero p {
+      font-size: 1.15rem;
+      line-height: 1.5;
+      color: #b9aede;
+      margin-bottom: 36px;
+      max-width: 480px;
+      user-select: none;
+    }
+
+    .btn {
+      padding: 16px 36px;
+      font-size: 1.1rem;
+      font-weight: 700;
+      background: linear-gradient(90deg, #8a2be2 0%, #ff00ff 100%);
+      border: none;
+      border-radius: 12px;
+      color: white;
+      cursor: pointer;
+      box-shadow:
+        0 4px 8px rgba(138, 43, 226, 0.5),
+        0 0 12px #ff00ff88;
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      user-select: none;
+      backdrop-filter: brightness(1.2);
+    }
+
+    .btn:hover {
+      box-shadow:
+        0 6px 14px rgba(138, 43, 226, 0.75),
+        0 0 20px #ff00ffcc;
+      transform: scale(1.05);
+      opacity: 0.95;
+    }
+
+    /* Background effects container */
+    .background-effects {
       position: fixed;
-      width: 100%;
-      height: 100%;
       top: 0;
       left: 0;
-      overflow: hidden;
+      width: 100vw;
+      height: 100vh;
+      overflow: visible;
+      z-index: 0;
+      pointer-events: none;
+      user-select: none;
+    }
+
+    /* Grid at bottom */
+    .grid {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 280px;
+      background:
+        repeating-linear-gradient(
+          to right,
+          rgba(255, 255, 255, 0.06),
+          rgba(255, 255, 255, 0.06) 1px,
+          transparent 1px,
+          transparent 50px
+        ),
+        repeating-linear-gradient(
+          to top,
+          rgba(255, 255, 255, 0.06),
+          rgba(255, 255, 255, 0.06) 1px,
+          transparent 1px,
+          transparent 50px
+        );
+      transform: perspective(1000px) rotateX(65deg);
+      background-size: 50px 50px;
+      filter: blur(0.7px);
+      animation: gridWave 30s linear infinite;
+      opacity: 0.3;
+      pointer-events: none;
       z-index: 0;
     }
 
-    .star {
+    @keyframes gridWave {
+      0% {
+        background-position: 0 0, 0 0;
+      }
+      100% {
+        background-position: 200px 0, 0 200px;
+      }
+    }
+
+    /* Diagonal animated lines */
+    .lines {
       position: absolute;
-      width: 2px;
-      height: 2px;
-      background: white;
-      border-radius: 50%;
-      animation: blink 2s infinite ease-in-out;
-    }
-
-    @keyframes blink {
-      0%, 100% { opacity: 0.2; }
-      50% { opacity: 1; }
-    }
-
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 2rem;
-      z-index: 1;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-    }
-
-    p {
-      font-size: 1.2rem;
-      color: #e0e7ff;
-      margin-bottom: 2rem;
-    }
-
-    .email-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-    }
-
-    input[type="email"] {
-      padding: 12px 16px;
-      border-radius: 6px;
-      border: none;
-      font-size: 1rem;
+      top: 0;
+      left: 0;
       width: 100%;
-      max-width: 320px;
-      outline: none;
-      transition: box-shadow 0.3s ease;
+      height: 100%;
+      background: repeating-linear-gradient(
+        45deg,
+        transparent 0,
+        #ff00ff44 5px,
+        transparent 15px
+      );
+      pointer-events: none;
+      mix-blend-mode: screen;
+      animation: moveLines 40s linear infinite;
+      filter: blur(1px);
+      z-index: 0;
+      opacity: 0.12;
     }
 
-    input[type="email"]:focus {
-      box-shadow: 0 0 10px #fff;
+    @keyframes moveLines {
+      0% {
+        background-position: 0 0;
+      }
+      100% {
+        background-position: 1000px 1000px;
+      }
     }
 
-    button {
-      background-color: #ffffff;
-      color: #4f46e5;
-      padding: 10px 20px;
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: all 0.3s ease;
+    /* Cube container */
+    .cube {
+      position: absolute;
+      top: 110px;
+      right: 110px;
+      width: 160px;
+      height: 160px;
+      transform-style: preserve-3d;
+      animation: rotateCube 12s linear infinite;
+      pointer-events: none;
+      z-index: 1;
+      filter: drop-shadow(0 0 12px #ff00ffaa);
     }
 
-    button:hover {
-      background-color: #e0e7ff;
-      transform: scale(1.05);
+    /* Each face of cube */
+    .cube div {
+      position: absolute;
+      width: 160px;
+      height: 160px;
+      background: linear-gradient(135deg, #8a2be2dd, #ff00ffcc);
+      border: 2px solid #ff00ffaa;
+      box-shadow:
+        0 0 20px #ff00ffbb,
+        inset 0 0 15px #8a2be2aa;
+      border-radius: 8px;
+      animation: pulseGlow 4s ease-in-out infinite;
     }
 
+    .cube .front  { transform: translateZ(80px); }
+    .cube .back   { transform: rotateY(180deg) translateZ(80px); }
+    .cube .right  { transform: rotateY(90deg) translateZ(80px); }
+    .cube .left   { transform: rotateY(-90deg) translateZ(80px); }
+    .cube .top    { transform: rotateX(90deg) translateZ(80px); }
+    .cube .bottom { transform: rotateX(-90deg) translateZ(80px); }
+
+    @keyframes rotateCube {
+      from { transform: rotateX(-20deg) rotateY(0deg); }
+      to   { transform: rotateX(-20deg) rotateY(360deg); }
+    }
+
+    @keyframes pulseGlow {
+      0%, 100% {
+        box-shadow:
+          0 0 15px #ff00ff88,
+          inset 0 0 10px #8a2be244;
+      }
+      50% {
+        box-shadow:
+          0 0 35px #ff00ffcc,
+          inset 0 0 20px #8a2be288;
+      }
+    }
+
+    /* Footer styling */
     footer {
       text-align: center;
-      padding: 1rem;
+      padding: 20px 0;
       font-size: 0.9rem;
-      background: rgba(0, 0, 0, 0.1);
-      color: #d1d5db;
-      z-index: 2;
+      color: #a99acc;
+      background: rgba(13, 13, 43, 0.6);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
+      user-select: none;
+      z-index: 10;
+      border-radius: 15px 15px 0 0;
+      margin-top: auto;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 900px) {
+      header {
+        padding: 20px 40px;
+      }
+      .hero {
+        padding: 80px 40px;
+        max-width: 90vw;
+      }
+      .hero h1 {
+        font-size: 2.8rem;
+      }
+      .cube {
+        width: 120px;
+        height: 120px;
+        top: 80px;
+        right: 40px;
+      }
+      .cube div {
+        width: 120px;
+        height: 120px;
+      }
+      .grid {
+        height: 180px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Star Background -->
-  <div class="stars" id="stars"></div>
-
-  <!-- Header -->
   <header>
-    <strong>🌐 clpnet.world</strong>
+    <div class="logo">CLPNET</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Contact</a>
+    </nav>
   </header>
 
-  <!-- Main Content -->
-  <main>
-    <h1>🚀 Launching Soon</h1>
-    <p>We’re working hard behind the scenes. Get ready for something awesome!</p>
-    <div class="email-box">
-      <input type="email" placeholder="Enter your email" />
-      <button>Notify Me</button>
-    </div>
-  </main>
+  <section class="hero">
+    <h1>Innovative<br />Solutions for<br />Your Business</h1>
+    <p>We provide cutting-edge solutions to help your business grow and succeed.</p>
+    <button class="btn">Get Started</button>
+  </section>
 
-  <!-- Footer -->
+  <div class="background-effects">
+    <div class="cube">
+      <div class="front"></div>
+      <div class="back"></div>
+      <div class="right"></div>
+      <div class="left"></div>
+      <div class="top"></div>
+      <div class="bottom"></div>
+    </div>
+    <div class="grid"></div>
+    <div class="lines"></div>
+  </div>
+
   <footer>
-    © 2025 clpnet.world | All rights reserved.
+    &copy; 2025 CLPNET. All rights reserved.
   </footer>
 
-  <!-- Star Generator -->
-  <script>
-    const starsContainer = document.getElementById('stars');
-    for (let i = 0; i < 100; i++) {
-      const star = document.createElement('div');
-      star.className = 'star';
-      star.style.top = Math.random() * 100 + '%';
-      star.style.left = Math.random() * 100 + '%';
-      star.style.animationDuration = (Math.random() * 3 + 2) + 's';
-      starsContainer.appendChild(star);
-    }
-  </script>
 </body>
 </html>
