--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                     </div>
                     <h3>Cloud Solutions</h3>
                     <p>Secure, scalable cloud infrastructure to enhance your business agility and reduce operational costs.</p>
-                    <a href="#" class="btn btn-outline">Learn More</a>
+                    <a href="https://www.clpnet.world/paper1.html" class="btn btn-outline">Learn More</a>
                 </div>
                 
                 <div class="service-card">
@@ -1138,3 +1138,4 @@
     </script>
 </body>
 </html>
+
