--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
                 <div class="footer-col">
                     <h3>Our Services</h3>
                     <ul class="footer-links">
-                        <li><a href="#">Cloud Solutions</a></li>
+                        <li><a href="https://www.clpnet.world/paper1.html">Cloud Solutions</a></li>
                         <li><a href="#">Data Analytics</a></li>
                         <li><a href="#">Cyber Security</a></li>
                         <li><a href="#">AI Automation</a></li>
@@ -1138,4 +1138,5 @@
     </script>
 </body>
 </html>
+
 
