--- a/index.html
+++ b/index.html
@@ -1037,8 +1037,8 @@
                 <div class="footer-col">
                     <h3>Our Services</h3>
                     <ul class="footer-links">
-                        <li><a href="https://www.clpnet.world/paper1.html">Cloud Solutions</a></li>
-                        <li><a href="#">Data Analytics</a></li>
+                        <li><a href="https://www.clpnet.world/paper1.html">Cloud Solutions / Paper 1</a></li>
+                        <li><a href="https://www.clpnet.world/submission/">Data Analytics / Submission</a></li>
                         <li><a href="#">Cyber Security</a></li>
                         <li><a href="#">AI Automation</a></li>
                         <li><a href="#">App Development</a></li>
@@ -1138,5 +1138,6 @@
     </script>
 </body>
 </html>
+
 
 
