--- a/broad/index.html
+++ b/broad/index.html
@@ -397,7 +397,7 @@ ul {
             <nav class="main-nav">
                 <ul>
                     <li><a href="#">About us <i class="fas fa-caret-down"></i></a></li>
-                    <li><a href="#">All journals</a></li>
+                    <li><a href="https://clpnet.world/journals">All journals</a></li>
                     <li><a href="#">All articles</a></li>
                 </ul>
             </nav>
@@ -519,3 +519,4 @@ ul {
 
 </body>
 </html>
+
