--- a/broad/index.html
+++ b/broad/index.html
@@ -402,7 +402,7 @@ ul {
                 </ul>
             </nav>
             <div class="nav-actions">
-                <a href="#" class="btn-submit">Submit your research</a>
+                <a href="https://clpnet.world/submission/" class="btn-submit">Submit your research</a>
                 <button class="icon-btn"><i class="fas fa-search"></i> Search</button>
                 <button class="icon-btn"><i class="fas fa-user"></i> Login</button>
             </div>
@@ -519,4 +519,5 @@ ul {
 
 </body>
 </html>
+
 
