--- a/broad/index.html
+++ b/broad/index.html
@@ -398,7 +398,7 @@ ul {
                 <ul>
                     <li><a href="#">About us <i class="fas fa-caret-down"></i></a></li>
                     <li><a href="https://clpnet.world/journals">All journals</a></li>
-                    <li><a href="#">All articles</a></li>
+                    <li><a href="https://clpnet.world/articles">All articles</a></li>
                 </ul>
             </nav>
             <div class="nav-actions">
@@ -446,23 +446,23 @@ ul {
             <h2 class="section-title">Discover Our Research Fields</h2>
             <div class="subject-grid">
                 <div class="subject-card">
-                    <img src="https://via.placeholder.com/200x200?text=Marine" alt="Marine Life">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvZH7KixKDXaxAawQ8NfieIYCZpI0BE5SkJJdmY-tCh5AQquA9pL7E5uMG6GKgzb0tZBw&usqp=CAU" alt="Marine Life">
                     <div class="card-overlay">Marine Life</div>
                 </div>
                 <div class="subject-card">
-                    <img src="https://via.placeholder.com/200x200?text=Agri" alt="Agricultural Science">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_VlLyeoNeP-lhYBU3bZ0GSouoOCn6xk_xBA&s" alt="Agricultural Science">
                     <div class="card-overlay">Agricultural Science</div>
                 </div>
                 <div class="subject-card">
-                    <img src="https://via.placeholder.com/200x200?text=Engine" alt="Engineering">
+                    <img src="https://cdn.mos.cms.futurecdn.net/v2/t:0,l:1,cw:2259,ch:1271,q:80,w:2259/HFUAjfbamNhbM8dsNSQW3D.jpg" alt="Engineering">
                     <div class="card-overlay">Engineering</div>
                 </div>
                 <div class="subject-card">
-                    <img src="https://via.placeholder.com/200x200?text=Health" alt="Health and Medicine">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAl3f45MsRiyhTzuZRyfJRkYy4JYCoB9iCnuRsFB19SuAEVARLZWR8rUUD_e17Thj5VTE&usqp=CAU" alt="Health and Medicine">
                     <div class="card-overlay">Health and Medicine</div>
                 </div>
                 <div class="subject-card">
-                    <img src="https://via.placeholder.com/200x200?text=Climate" alt="Climate Research">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7BXsDaNmKyCjqw-B3BEEhfE4wj3dWUJDHM5byP0xr0LVsjw2efeShMzVnAXglmBxolt8&usqp=CAU" alt="Climate Research">
                     <div class="card-overlay">Climate Research</div>
                 </div>
             </div>
@@ -498,8 +498,8 @@ ul {
             <div class="footer-col">
                 <h4>Publish</h4>
                 <ul>
-                    <li><a href="#">Submit a manuscript</a></li>
-                    <li><a href="#">Journals A-Z</a></li>
+                    <li><a href="https://clpnet.world/submission/">Submit a manuscript</a></li>
+                    <li><a href="https://clpnet.world/journals">Journals A-Z</a></li>
                     <li><a href="#">Reviewer Guidelines</a></li>
                     <li><a href="#">Open Science</a></li>
                 </ul>
@@ -519,5 +519,4 @@ ul {
 
 </body>
 </html>
-
 
