--- a/broad/index.html
+++ b/broad/index.html
@@ -500,6 +500,7 @@ ul {
                 <ul>
                     <li><a href="https://clpnet.world/submission/">Submit a manuscript</a></li>
                     <li><a href="https://clpnet.world/journals">Journals A-Z</a></li>
+                    <li><a href="https://clpnet.world/editors">Journals A-Z</a></li>
                     <li><a href="#">Reviewer Guidelines</a></li>
                     <li><a href="#">Open Science</a></li>
                 </ul>
@@ -519,4 +520,5 @@ ul {
 
 </body>
 </html>
+
 
