--- a/broad/index.html
+++ b/broad/index.html
@@ -501,6 +501,7 @@ ul {
                     <li><a href="https://clpnet.world/submission/">Submit a manuscript</a></li>
                     <li><a href="https://clpnet.world/journals">Journals A-Z</a></li>
                     <li><a href="https://clpnet.world/editors">Editors</a></li>
+                    <li><a href="https://clpnet.world/box">Sticky Box</a></li>
                     <li><a href="#">Reviewer Guidelines</a></li>
                     <li><a href="#">Open Science</a></li>
                 </ul>
@@ -520,6 +521,7 @@ ul {
 
 </body>
 </html>
+
 
 
 
