--- a/journals/index.html
+++ b/journals/index.html
@@ -21,7 +21,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: var(--bg-white);
+            background-color: #F7F7F7;
             color: var(--text-dark);
             line-height: 1.6;
         }
@@ -218,4 +218,5 @@
     </section>
 
 </body>
+
 </html>
