--- a/broad/index.html
+++ b/broad/index.html
@@ -24,7 +24,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--bg-light-gray);
+    background-color: #F7F7F7;
     color: var(--text-dark);
 }
 
@@ -521,6 +521,7 @@ ul {
 
 </body>
 </html>
+
 
 
 
